# rust-kafka-sample

./: .gitignore  Cargo.toml  README.md
src/: main.rs
