[package]
edition = "2021"
name = "kafka-sample"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
bytes = "1.1.0"
ctrlc = "3.1.8"
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.0"
rand = "0.8.3"
rdkafka = {version = "0.25", features = ["cmake-build", "ssl"]}
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
